# tasted

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 193cb8eb7cf7_currencies_table_with_eur_rates.py  1fcf61e22684_initial_schema.py  5bb1bbda45d4_clerk_users_menus_scans_dish_attributes_.py  8a41c7d90b12_dish_families_trackables.py  b3f2a9c4d1e7_scans_updated_at_for_stuck_cleanup.py  c3d51e07aa24_seed_non_ecb_currencies.py  d4a1c6e9b2f8_user_questions_table.py  e60b6087f7db_initial_schema.py  e8b3f5a2c7d1_menus_language.py
backend/app/: auth.py  celery_app.py  config.py  db.py  main.py  tasks.py
backend/app/domain/: __init__.py  catalog.py  dish.py  menu.py  preferences.py  question.py
backend/app/llm/: clients.py  prompts.py
backend/app/models/: __init__.py  attribute.py  base.py  currency.py  dish.py  question.py  scan.py  trackable.py  user.py
backend/app/repositories/: __init__.py  base.py  currencies.py  dishes.py  menus.py  questions.py  scans.py  trackables.py  users.py  votes.py
backend/app/routers/: currencies.py  dishes.py  health.py  menus.py  preferences.py  questions.py  restrictions.py  trackables.py
backend/app/schemas/: __init__.py  currency.py  dish.py  menu.py  trackable.py  vote.py
backend/app/services/: ai.py  currencies.py  dishes.py  menus.py  processing.py  questions.py  storage.py  trackables.py  users.py
backend/scripts/: try_pipeline.py
backend/tests/: conftest.py
(+30 files in other folders)
